# NatureCoin

./: Cargo.toml  README.md
src/utils/: mod.rs
src/utils/cryptography/: crypto.rs  mod.rs
tests/: crypto_test.rs
